# auth_project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
my_project/: README.md  main.py
my_project/alembic/: env.py
my_project/alembic/versions/: 2025_08_14_2321-8780e7151dff_create_user_table.py  2025_08_15_1417-17685eaa99e7_create_all_and_hash_password.py
my_project/api/: crud.py  user_api.py
my_project/api/CRUD/: crud_user.py
my_project/api/dependencies/: helpers.py  user_token.py
my_project/core/: config.py
my_project/core/model/: base.py  helpers_db.py  user.py
my_project/core/schema/: token.py  user.py
my_project/utils/: validates.py
